# arm_control_marmotte

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
arm_control_marmotte/: arm_control_node.py
cfg/: speed_ratios.cfg
launch/: arm_control_node.launch  arm_control_node.launch.xml
positions/: downstairs.json  home.json  reach_test.json  sleep.json  table.json
sequences/: analyze_dumbbell.json  grab_dumbbell.json  open_door.json  panoramic_image.json  panoramic_image_2.json  test_sequence.json
src/: arm_control_node.py
